tests/paczka1/fuzzy1/93084094.err
Error in line 1: lJssn A321 73,2
Error in line 5: lJssn A371 47,0
Error in line 2: A321 A282 58,3
Error in line 11: 9jDV A371 66,2
Error in line 20: 9jDV A321 32þ,9
Error in line 22: lJssn A282 83,2
Error in line 23: A321 A324 84,2
Error in line 30: A321 A282 67,9
Error in line 34: JfkNDbgNGob A282 73,1
